# wasm-utils-1

./: Cargo.toml  README.md
cli/: Cargo.toml  README.md
cli/check/: main.rs
cli/ext/: main.rs
cli/gas/: main.rs
cli/pack/: main.rs
cli/prune/: main.rs
cli/stack_height/: main.rs
src/: build.rs  lib.rs  pack.rs
tests/: diff.rs
