[package]
name = "owasm-utils"
version = "0.6.0"
authors = ["Nikolay Volf <nikvolf@gmail.com>", "Sergey Pepyakin <s.pepyakin@gmail.com>", "Oasis Labs <info@oasislabs.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
reposiory = "https://github.com/oasislabs/owasm-utils"
homepage = "https://github.com/oasislabs/owasm-utils"
description = "Collection of command-line utilities and corresponding Rust api for producing owasm-compatible executables"
keywords = ["wasm", "webassembly", "owasm"]

[dependencies]
parity-wasm = { version = "0.31.3", default-features = false }
log = { version = "0.4", default-features = false }
byteorder = { version = "1", default-features = false }

[dev-dependencies]
tempdir = "0.3"
wabt = "0.2"
diff = "0.1.11"

[features]
default = ["std"]
std = ["parity-wasm/std", "log/std", "byteorder/std"]

[workspace]
members = [
  "./cli",
]
